html_css/css/main.css
*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font-family: 'Lato', sans-serif;
  background-color: rgba(235, 235, 235, 1.0);
  color: rgba(30, 35, 35, 1.0);
  padding: 0;
  margin: auto;
  line-height: 1.5rem;
}

hr {
  color: rgba(30, 35, 35, 0.2);
  background-color: (30, 35, 35, 0.2);
  margin: 1.0rem;
}


header img.home{
  padding: 0 10%;
}

header img {
  padding: 0 15%;
}

#banner {
  line-height: 0;
}

#content {
  margin: 0 15%;
}

#game-content {
    margin: 0 15%;
    padding: 0;
    border: 0;
    text-align: center;
  }

#game-content p {
  margin: 0;
}

.banner {
  width: auto;
  margin-top: 1.0rem;
}

img {
  width: auto;
  height: auto;
  max-width: 100%;
}

p.Oswald-pre {
  font-family: 'Oswald', sans-serif;
  font-size: 1.2rem;
}

ul {
  list-style: none;
  text-decoration: none;
}

section {
  margin: 1em 0;
  padding: 0.5em 0;
}

section h1 {
  font-weight: bold;
  font-family: "Oswald", sans-serif;
  font-size: 1.8rem;
  margin: 0;
}

section h2 {
  font-family: "Abel", sans-serif;
  font-size: 1.35rem;
  font-weight: normal;
  margin: 0;
}

section h2.about {
  color: rgba(255, 110, 0, 1.0);
}

section .newstitle {
  text-decoration: none;
}

h2s {
  margin: 2.0rem;
}

section h3 {
  font-weight: normal;
  margin: 0;
}

section h1 b, section h2 b, section h3 b, section h4 b {
  font-family: "Lato";
  font-size: 1.0rem;
  font-weight: normal;
  color: rgba(135, 135, 135, 1.0);
  margin-left: 1.0rem;
}

section code {
  display: inline-block;
  background-color: rgba(230, 230, 230, 1.0);
  padding: 0.5em 0.75em;
}

section .tag {
  display: inline-block;
  background-color: rgba(130, 130, 130, 1.0);
  border: 0.16rem solid;
  border-radius: 0.25rem;
  color: rgba(255, 255, 255, 1.0);
  padding: 0.3rem 0.6rem;
  margin: 0.2rem 0;
  font-size: 0.7rem;
}

b.archive a{
  float:right;
  font-size: 120%;
}

/* Using a 5 column grid */
.grid-col-1 {
  width: 20%;
}

.grid-col-2 {
  width: 40%;
  margin: 0;
}

.grid-col-3 {
  width: 60%;
}

.grid-col-4 {
  width: 80%;
}

.grid-col-5 {
  width: 100%;
}

[class^=grid-col-] {
  padding: 0;
  display: inline-block;
  float: left;
}

[class^=grid-col-] p {
  padding: 0.5rem;
  margin: 0;
}

.container {
  background-color: rgba(255, 255, 255, 1.0);
  margin: 1.0rem 0;
  padding: 1.6rem;
  box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.2);
}

.container:after, .topnav:after {
  content:"";
  display:block;
  clear: both;
}

/* Links */

section a {
  color: rgba(255, 110, 0, 1.0);
}

section a:hover, nav ul li a:hover {
  color: rgba(30, 35, 35, 1.0);
  transition: color 0.2s ease-in-out;
}

/* buttons */

#buttons li {
  display: inline-block;
  padding: 1.0rem;
}

a.btn {
  display: inline-block;
  padding: 1.0rem;
  border-radius: 0.25em;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease-out;
  transition: color 0.4s ease-out;
  transition: background-color 0.35s ease-out;
}

a.submit {
  color: rgba(255, 255, 255, 1.0);
  background-color: rgba(50, 169, 247, 1.0);
}

a.submit:hover, a.submit2:hover {
  color: rgba(30, 35, 35, 1.0);
  background-color: rgba(206, 206, 206, 1.0);
}

a.cancel {
  color: rgba(135, 135, 135, 1.0);
  background-color: transparent;
}

a.cancel:hover {
  color: rgba(0, 0, 0, 1.0);
}

a.submit2 {
  color: rgba(255, 255, 255, 1.0);
  background-color: rgba(76, 216, 90, 1.0);
}

a.remove {
  color: rgba(255, 255, 255, 1.0);
  background-color: rgba(200, 40, 40, 1.0);
}

a.remove:hover {
  background-color: rgba(0, 0, 0, 1.0);
  color: rgba(200, 40, 40, 1.0);
}

a.cartnav {
  display: inline-block;
  font-family: 'Abel', sans-serif;
  font-size: 1.0rem;
  color: rgba(255, 255, 255, 1.0);
  background-color: transparent;
  border-radius: 0.25em;
  border: 0.1rem solid rgba(255, 255, 255, 1.0);
  padding: 0.2rem 0.7rem;
  text-decoration: none;

  -webkit-transition: background-color 0.3s ease-out;
  transition: color 0.4s ease-out;
  transition: background-color 0.35s ease-out;
}

a.cartnav:hover {
  color: rgba(255, 255, 255, 1.0);
  background-color: rgba(76, 216, 90, 1.0);
  border-color: rgba(76, 216, 90, 1.0);
}

/* Top Navigation */
.topnav {
  margin: 0 15%;
  background-color: rgba(60, 60, 60, 1.0);
  box-shadow: 0px 6px 5px -3px rgba(0, 0, 0, 0.2); 
}

.topnav .nav-item a{
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 1.4rem;
  color: rgba(255, 255, 255, 1.0);
  text-decoration: none;
  width: 100%;
  padding: 1.0rem 0;
    
  transition: color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;  
}

.topnav .nav-item a:hover {
  color: rgba(255, 110, 0, 1.0);
  border-bottom: rgba(255, 110, 0, 1.0);
}

.topnav .selected a{
  color: rgba(255, 255, 255, 1.0);
  background-color: rgba(255, 110, 0, 1.0);
}

.topnav .selected a:hover {
  color: rgba(255, 255, 255, 1.0);
}

.nav-item {
  width: 20%;

  float: left;
  padding: 0; 
  text-align: center;
}

#cartnav {
  display: inline-block;
  text-align: center;
  margin: 0.3rem 0;
  padding: 0.3rem;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgba(60, 60, 60, 1.0);
}

#cartnav .nav-item {
  width: 4.9rem;
  float: right;
  margin: 0 0 0 1.0rem;
}

#cartnav .nav-item a {
  width: 100%;
  padding: 0.2rem;
}

#footer {
  text-align: center;
}

#footer .meta {
  text-align: center;
  margin: 0;
  padding: 0;
}

#footer .meta .footer-link{
  font-size: 0.7rem;
  display: inline-block;
  padding: 0 1.0rem;
  float: left;
  width: 20%;
  text-decoration: none;
}

/*#stylenav .topnav .nav-item {
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 1.4rem;
  width: 13%;
  padding: 1.0rem 0;
}
*/

#guide-nav ul {
  display: inline-block;
  margin: auto;
  width: auto;
}

nav ul li a {
  color: rgba(255, 110, 0, 1.0);
  text-decoration: none;
}

/* Color blocks */
.colorblock {
  color: rgb(255, 255, 255);
  display: inline-block;
  border-radius: 1.0rem;
  width: 18.0rem;
  height: 8.0rem;
  padding: 2.0rem;
  margin: 1.0rem;
  text-align: center;
  border: 1px solid rgba(30, 35, 35, 0.4);
}

.colorblock:hover {
  border-color: rgba(30, 35, 35, 1.0);
  transition: border 0.4s ease-in-out;
}

.colorblock span {
  font-size: 1.0rem;
}

.colorgrey {
  background-color: rgba(255, 255, 254, 1.0);
  color: rgba(30, 35, 35, 1.0);
}

.colordark {
  background-color: rgba(30, 35, 35, 1.0);
}

.colorwhite {
  background-color: rgba(0, 0, 0, 1.0);
}

.colorsub {
  background-color: rgba(135, 135, 135, 1.0);
}

.colororange {
  background-color: rgba(255, 110, 0, 1.0);
}

.colorblue {
  background-color: rgba(50, 169, 247, 1.0);
}

.colorgreen {
  background-color: rgba(100, 200, 40, 1.0);
}

.colornavgrey {
  background-color: rgba(60, 60, 60, 1.0);
}

/* Forms */

.input-wrapper {
  padding: 0.5rem;
}

input {
  padding: 0.5rem 3.0rem 0.5rem 0.5rem;
}

input.form-search {
  border-radius: 1.0rem;
  padding: 0.5rem 3.0rem 0.5rem 0.8rem;
}


/* merch test */

[class^=grid-col-] figure {
  width: 100%;
  height: 4.0rem;
  text-align: center;
  display: inline-block;
  padding: 0;
  margin: 0;
}

[class^=grid-col-] figure img{
  text-align: center;
}

[class^=grid-col-] figcaption{
  color: rgba(255, 255, 255, 1.0);
  background-color: rgba(35, 35, 35, 1.0);
  padding: 0.1rem;
  height: auto;
}

figcaption .item-name {
  text-align: center;
  padding: 1.0rem;
}

figcaption .item-name a{
  color: rgba(255, 255, 255, 1.0);
}

figcaption .item-name a:hover {
  color: rgba(255, 110, 0, 1.0);
}


.products figure{
  display: inline-block;
}

.products .grid-col-1 {
margin: 0 2.5%;
border: 0.1rem solid rgba(35, 35, 35, 1.0);
}

.product-desc {
  padding-left: 4.0rem;
} /**/

/*checkout cart*/

/* index-layout:re */
.container .featured-item {
  margin-right: 1.0rem;
}
.container .featured-item img {
  background-color: rgba(255, 255, 255, 1.0);
}

.h2p {
  padding: 0 0 0 5%;
}

/*============================================================*/
/*Responsive adjustments*/

@media screen and (max-width: 489px) {

  body {
    font-size: 0.8rem;
  }

  .topnav, #footer {
    padding-left: 0
  }

  .topnav .nav-item, #footer .footer-link {
    font-size: 1.0rem;
    width: 100%;
    line-height: 0.8rem;
  }

  #content, #game-content {
    padding: 0 5%;
    margin: 0 5%;
  }

  #content img, #game-content img {
    width: auto;
  }


  [class^=grid-col-] {
    display:block;
    width: 100%;
  }

  #game-content .container {
  margin: 0;
  padding: 0;
  }
}

@media screen and (max-width: 600px) {
#stylenav .topnav, .topnav, #cartnav, #footer, header img {
    padding: 0;
    margin: 0;
  }

  #content, #game-content {
    margin: 0;
    padding: 0 7%;
  }

  #game-content .grid-col-3 {
    width: 100%;
  }

  #game-content .grid-col-1 {
    display: none;
    width: 0%;
  }

  #stylenav .topnav .nav-item {
    width: 18%;
  }
}

@media screen and (max-width: 800px) {
  #content {
    margin: 0;
    padding: 0 9%;
  }

  #stylenav .topnav, .topnav, #cartnav, #footer, header img {
    padding: 0;
    margin: 0;
  }

}

@media screen and (max-width: 1180px) {
  #content {
    padding: 0 5%;
    margin: 0;
  }
  #stylenav .topnav, .topnav, #cartnav, #footer, header img {
    padding: 0;
    margin: 0;
  }
}

/*@media screen and (min-width: 1440px) {
  #content {
    padding: 0 5%;
    margin: 0;
  }

  #stylenav, .topnav, #cartnav {
    margin: 0 5%;
  }
}*/

@media screen and (min-width: 2500px) {
  section h1 {
    font-size: 3.0rem;
  }

  section h2 {
    font-size: 2.6rem;
  }

  section h3 {
    font-size: 2.2rem;
  }


  #content, #game-content {
    padding: 0 15% 0 35%;
    margin: -19% 0 0 0;
    font-size: 2.0rem;
    line-height: 3.2rem;
  }

  .item-name {
    font-size: 1.4rem;
    line-height: 2.0rem;
  }

  #stylenav .topnav, .topnav, #cartnav, header img, header img.home{
    padding: 0;
    width: 30%;
    margin: 0;
  }

  .topnav .nav-item {
    padding: 1.0rem 0;
    margin: 0;
    width: 100%;
    font-size: 2.8rem;
    line-height: 4.0rem;
  }

  #cartnav {
    padding: 1.0rem 1.0rem 1.0rem 0;
    font-size: 1.4rem;
  }
}

